# fast-socket

./: CMakeLists.txt  README.en.md  README.md
cmake/: designPattern.cmake  network.cmake  utils.cmake
examples/: main.cpp  test_daemon.hpp  test_process_communication.hpp  test_socket.hpp
examples/designPattern/behavioralPattern/chainOfResponsibilityPattern/: main.cpp
examples/designPattern/behavioralPattern/commandPattern/: main.cpp
examples/designPattern/behavioralPattern/interpreterPattern/: main.cpp
examples/designPattern/behavioralPattern/iteratorPattern/: main.cpp
examples/designPattern/behavioralPattern/mediatorPattern/: main.cpp
examples/designPattern/behavioralPattern/mementoPattern/: main.cpp
examples/designPattern/behavioralPattern/nullObjectPattern/: main.cpp
examples/designPattern/behavioralPattern/observerPattern/: main.cpp
examples/designPattern/behavioralPattern/statePattern/: main.cpp
examples/designPattern/behavioralPattern/strategyPattern/: main.cpp
examples/designPattern/behavioralPattern/templatePattern/: main.cpp
examples/designPattern/behavioralPattern/visitorPattern/: main.cpp
examples/designPattern/createTypePattern/abstractFactoryPattern/: DBAbstractFactory.hpp  cameraAbstractFactory.hpp  connectFactory.hpp  destroyFactory.hpp  execSqlFactory.hpp  main.cpp
examples/designPattern/createTypePattern/abstractFactoryPattern/productClass/: mysqlConnect.hpp  mysqlDestroy.hpp  mysqlExecSql.hpp  oracleDestroy.hpp  oracleExecSql.hpp
examples/designPattern/createTypePattern/abstractFactoryPattern/productFamily/: mysqlFactory.hpp
examples/designPattern/createTypePattern/factoryPattern/: cameraFactory.hpp  main.cpp  sonyCamera.hpp
examples/designPattern/createTypePattern/prototypePattern/: main.cpp
examples/designPattern/createTypePattern/singletonPattern/lazybones/: threadSafeLazybones.hpp
examples/designPattern/creationPattern/abstractFactoryPattern/: DBAbstractFactory.hpp  connectFactory.hpp  destroyFactory.hpp  main.cpp
examples/designPattern/creationPattern/abstractFactoryPattern/productClass/: mysqlDestroy.hpp  oracleConnect.hpp  oracleDestroy.hpp  oracleExecSql.hpp
examples/designPattern/creationPattern/abstractFactoryPattern/productFamily/: mysqlFactory.hpp  oracleFactory.hpp
examples/designPattern/creationPattern/builderPattern/: main.cpp
examples/designPattern/creationPattern/factoryPattern/: canonCamera.hpp  main.cpp  nikonCamera.hpp
examples/designPattern/creationPattern/singletonPattern/hungryMan/: hungryMan.hpp  main.cpp
examples/designPattern/creationPattern/singletonPattern/lazybones/: lazybones.hpp  main.cpp
examples/designPattern/structuralPattern/adapterPattern/: main.cpp
examples/designPattern/structuralPattern/bridgePattern/: main.cpp
examples/designPattern/structuralPattern/componentPattern/: main.cpp
examples/designPattern/structuralPattern/decoratorPattern/: main.cpp
examples/designPattern/structuralPattern/facadePattern/: main.cpp
examples/designPattern/structuralPattern/filterAndCriteriaPattern/: main.cpp
examples/designPattern/structuralPattern/flyweightPattern/: main.cpp
examples/designPattern/structuralPattern/proxyPattern/: main.cpp
examples/network/: main.cpp  test_process.hpp  test_process_communication.hpp
examples/network/multiProcess/: server.cpp
examples/network/select/: server.cpp
examples/network/tcp/: main.cpp
examples/network/tcp/epoll/: client.cpp  server.cpp
examples/network/tcp/epoll_ET/: client.cpp  pipelineServer.cpp  server.cpp
examples/network/tcp/epoll_ET_non_block/: client.cpp  server.cpp
examples/network/tcp/multiProcess/: client.cpp
examples/network/tcp/multithreadingConcurrency/: client.cpp  server.cpp
examples/network/tcp/oneToOne/: client.cpp  server.cpp
examples/network/tcp/poll/: client.cpp  server.cpp
examples/network/tcp/select/: server.cpp
examples/network/tcp/testLinuxApi/: test_daemon.hpp  test_thread.hpp
examples/network/tcp/wrapError/: wrap.cpp
examples/network/udp/group/: client.cpp  server.cpp
examples/network/udp/simpleCS/: client.cpp  server.cpp
examples/network/wrapError/: wrap.h
examples/utils/collection/Range/: main.cpp
examples/utils/collection/optional/: main.cpp
examples/utils/collection/string/lexical_cast/: lexical_cast.h  main.cpp
examples/utils/dllParser/DllParser/linux/: CMakeLists.txt  DllParser2.hpp  main.cpp
examples/utils/dllParser/test_dll_caculate/: SKLDll.cpp  SKLDll.h
examples/utils/file/linux/: FileSystem.cpp
examples/utils/magic/encryption/base64/: main.cpp
examples/utils/magic/getMeta/: main.cpp
examples/utils/magic/qt/signal/: Signal.hpp
examples/utils/magic/spring/ioc/: main.cpp
examples/utils/system/file/: FileSystem.cpp  FileSystem.h
include/buffer/: buf_pool.h  message.h  reactor_buf.h  task_msg.h
include/common/: gLog.h  lars_reactor.h  thread_pool.h  thread_queue.h
include/event/: event_loop.h
include/net/: net_connection.h  tcp_client.cpp  tcp_client.h  tcp_conn.h  tcp_server.h  udp_client.h  udp_server.h
include/utils/: loadDll.hpp
include/utils/collection/map/: threadsafe_unordered_map.hpp
include/utils/collection/optional/: Optional.hpp
include/utils/collection/string/: format.hpp  string.hpp  stringSwitch.hpp
include/utils/common/: File.h  MD5.h  SHA1.h  nonCopyable.hpp  onceToken.hpp  util.h  uv_errno.h  yaml.hpp
include/utils/concurrent/mutex/: mutex.hpp
include/utils/concurrent/thread/: fast_sleep.hpp  task_thread.h  thread.hpp  thread_pool.hpp
include/utils/magic/crossPlatformDll/: dllParser.hpp
include/utils/magic/time/: date.h
include/utils/socket/: sockutil.h
main/: client.cpp  server.cpp  test.cpp
src/: main.cpp
src/buffer/: buf_pool.cpp  reactor_buf.cpp
src/common/: MD5.cpp  SHA1.cpp  thread_pool.cpp  uv_errno.cpp
src/event/: event_loop.cpp
src/net/: tcp_client.cpp  tcp_conn.cpp  tcp_server.cpp  udp_client.cpp  udp_server.cpp
src/utils/common/: File.cpp  util.cpp  yaml.cpp
src/utils/concurrent/thread/: task_thread.cpp
src/utils/magic/time/: date.cpp
src/utils/socket/: sockutil.cpp
(+9 files in other folders)
